fix layout issues

--- a/public/assets/admin/less/bootstrap/forms.less
+++ b/public/assets/admin/less/bootstrap/forms.less
@@ -252,18 +252,6 @@ textarea {
   margin-left: 10px; // space out consecutive inline controls
 }
 
-
-.tag {
-	font-family: Arial, sans-serif;
-	width: 200px;
-	position: relative;
-	top: 5px;
-	font-weight: bold;
-	text-transform: uppercase;
-	display: block;
-	float: left;
-}
-
 .radio-1 {
 	width: 193px;
 }
