--- a/public/assets/admin/less/chromatron.less
+++ b/public/assets/admin/less/chromatron.less
@@ -5,7 +5,7 @@
 
 /* Globals */
 html {
-  height: 100%;
+//  height: 100%;
 }
 
 body {
@@ -1830,7 +1830,7 @@ input[type="color"],
         &.active,
         &.done {
           color: @templateColor;
-          background-position: center -92px;
+//          background-position: center -92px;
         }
       }
     }
